--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="list">
+            <div class="item">
+                <img src="./images/super-1.png" alt="super-1">
+                <p>Superman</p>
+                <h1>12</h1>
+            </div>
+            <div class="item">
+                <img src="images/super-3.png" alt="super-3">
+                <p>Wonder Women</p>
+                <h1>30</h1>
+            </div>
+            <div class="score"><p><b>5 - 0</b></p> </div>
+            <div class="item">
+                <img src="images/super-2.png" alt="super-2">
+                <p>Captain America</p>
+                <h1>50</h1>
+            </div>
+            <div class="item">
+                <img src="images/super-4.png" alt="super-4">
+                <p>Grm Woman</p>
+                <h1>12</h1>
+            </div>
+        </div>
+    </div>
     <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
 </body>
 
